--- a/16.4_Redux_no_React_Actions_Assíncronas/exercise-game-of-thrones-characters/package.json
+++ b/16.4_Redux_no_React_Actions_Assíncronas/exercise-game-of-thrones-characters/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -33,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "fetch-mock-jest": "^1.3.0"
   }
 }
