--- a/26.2_NodeJS_Fluxo_Assincrono/io-local/package.json
+++ b/26.2_NodeJS_Fluxo_Assincrono/io-local/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node exercise1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
