exercise 1 and 2 - ajusting 2

--- a/26.2_NodeJS_Fluxo_Assincrono/io-local/package.json
+++ b/26.2_NodeJS_Fluxo_Assincrono/io-local/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "Tiago",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "chalk": "^4.1.0"
+  }
 }
