--- a/31.1_Arquiteteura_SOLID/exercicios/package.json
+++ b/31.1_Arquiteteura_SOLID/exercicios/package.json
@@ -2,18 +2,17 @@
   "name": "arquitetura-solid",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "start": "node plants.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
